2006-08-01  MenTaLguY  <mental@rydia.net>

	* configure.ac: refactor pkg-config tests and add explicit cairo test

2006-07-29  John Bintz  <jcoswell@coswellproductions.org>

  * src/nodepath.cpp:
  
    Fix bug where deleting a node broke the symmetry of neighboring
    smooth nodes and failed to convert those nodes to cusp nodes

2006-07-29  MenTaLguY  <mental@rydia.net>

	* src/sp-object.cpp:

	  remove GObject signals from SPObject

	* src/desktop.cpp, src/desktop.h, src/sp-gradient.cpp,
	  src/sp-gradient.h, src/sp-pattern.cpp, src/sp-pattern.h,
	  src/sp-switch.cpp, src/sp-switch.h, src/widgets/desktop-widget.cpp,
	  src/widgets/desktop-widget.h, src/widgets/gradient-image.cpp,
	  src/widgets/gradient-image.h, src/widgets/gradient-toolbar.cpp,
	  src/widgets/gradient-toolbar.cpp:

	  switch to sigc++ SPObject signals

2006-07-27  MenTaLguY  <mental@rydia.net>

	* src/dialogs/sp-attribute-widget.cpp,
	  src/dialogs/sp-attribute-widget.h, src/sp-offset.cpp,
	  src/sp-offset.h, src/sp-shape.cpp, src/sp-shape.h,
	  src/sp-use-reference.cpp, src/sp-use-reference.h:

	  switch to sigc++ SPObject signals

2006-07-26  MenTaLguY  <mental@rydia.net>

	* src/dialogs/object-attributes.cpp:

	  switch to sigc++ "release"

2006-07-26  MenTaLguY  <mental@rydia.net>

	* src/style.cpp, src/style.h:

	  finish switching to sigc++ SPObject signals for SPStyle

2006-07-25  MenTaLguY  <mental@rydia.net>

	* src/widgets/gradient-vector.cpp, src/widgets/gradient-vector.h:

	  switch to sigc++ SPObject signals for SPGradientVectorSelector

2006-07-25  MenTaLguY  <mental@rydia.net>

	* autogen.sh, configure.ac, debian/control, tools-version.sh:

	  un-libtoolize the build process (yay!) -- we haven't actually
	  used libtool for ages

2006-07-25  MenTaLguY  <mental@rydia.net>

	* src/extension/plugin, src/extension/plugin/Makefile_insert,
	  src/extension/plugin/makefile.in, src/extension/plugin/.cvsignore,
	  src/Makefile.am, configure.ac:

	  remove vestigal plugin support
